// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ts-to-json-schema interface heritage 1`] = `
"{
  "definitions": {
    "Foo": {
      "type": "object",
      "properties": {
        "b": {
          "type": "string",
          "title": "Bar.b"
        },
        "f": {
          "type": "number",
          "title": "Foo.f"
        }
      },
      "required": [
        "b",
        "f"
      ],
      "additionalProperties": false,
      "title": "Foo, Bar"
    },
    "Bar": {
      "type": "object",
      "properties": {
        "b": {
          "type": "string",
          "title": "Bar.b"
        }
      },
      "required": [
        "b"
      ],
      "additionalProperties": false,
      "title": "Bar"
    }
  },
  "$comment": "Generated by core-types-json-schema (https://github.com/grantila/core-types-json-schema) on behalf of typeconv (https://github.com/grantila/typeconv)"
}"
`;

exports[`ts-to-json-schema type intersection 1`] = `
"{
  "definitions": {
    "Foo": {
      "type": "object",
      "properties": {
        "b": {
          "type": "string",
          "title": "Bar.b"
        },
        "f": {
          "type": "number",
          "title": "f"
        }
      },
      "required": [
        "b",
        "f"
      ],
      "additionalProperties": false,
      "title": "Foo, Bar"
    },
    "Bar": {
      "type": "object",
      "properties": {
        "b": {
          "type": "string",
          "title": "Bar.b"
        }
      },
      "required": [
        "b"
      ],
      "additionalProperties": false,
      "title": "Bar"
    }
  },
  "$comment": "Generated by core-types-json-schema (https://github.com/grantila/core-types-json-schema) on behalf of typeconv (https://github.com/grantila/typeconv)"
}"
`;
